--- a/public/dash.html
+++ b/public/dash.html
@@ -351,13 +351,14 @@
 
 <div class="category" id="cat-puxadas">
   <button type="button" aria-expanded="false">
-  <i class="fas fa-search"></i> SUPORTE
+  <i class="fas fa-search"></i> OUTROS
     <span class="small">▸</span>
   </button>
 
   <div class="subs">
     <a href="/suporte">SUPORTE</a>
-        <a href="/planos">LOJA</a>
+  <a href="/planos">LOJA</a>
+    <a href="/painel">PAINEL ADM</a>
   </div>
 </div>
 
